--- a/index.html
+++ b/index.html
@@ -74,6 +74,14 @@
  <!-- Mustach here -->
 		<div id="body">
 
+
+
+		</div>
+
+		<div>
+				<iframe width="600" height="450" frameborder="0" style="border:0"
+				src="https://www.google.com/maps/embed/v1/place?q=Kano%20State&key=AIzaSyALAsKgz0QY-9AKARLzlu_1vRfcw4FRaXE"
+				allowfullscreen></iframe>
 		</div>
 
 		<!-- Registration form -->
