--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
 
 		</div>
 
-		<div>
-				<iframe width="600" height="450" frameborder="0" style="border:0"
-				src="https://www.google.com/maps/embed/v1/place?q=Kano%20State&key=AIzaSyALAsKgz0QY-9AKARLzlu_1vRfcw4FRaXE"
-				allowfullscreen></iframe>
+		<div id="maps">
+				<!-- <iframe width="600" height="450" frameborder="0" style="border:0"
+				src="https://www.google.com/maps/embed/v1/place?q=Kano%20State&key=AIzaSyBY0qQ189OqoQJGvg4YWEbXjnGL7WMYaek"
+				allowfullscreen></iframe> -->
 		</div>
 
 		<!-- Registration form -->
@@ -239,7 +239,7 @@
 	<script src="https://unpkg.com/@aeternity/aepp-sdk/dist/aepp-sdk.browser-script.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.js"></script>
 
-	<script src="assets/js/jquery-migrate-3.0.0.min.js"></script>
+	<!-- <script src="assets/js/jquery-migrate-3.0.0.min.js"></script> -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
 		integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous">
 	</script>
@@ -248,16 +248,18 @@
 	</script>
 
 
-	<script src="assets/js/jquery.backstretch.min.js"></script>
+	<!-- <script src="assets/js/jquery.backstretch.min.js"></script>
 	<script src="assets/js/wow.min.js"></script>
 	<script src="assets/js/waypoints.min.js"></script>
 	<script src="assets/js/scripts.js"></script>
-	
+	 -->
 
 	
 	
 	<script src="index.js"></script>
 	<script src="assets/js/loader.js"></script>
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBY0qQ189OqoQJGvg4YWEbXjnGL7WMYaek&callback=initMap"
+    async defer></script>
 
 
 
